tests/specs/ecosystem/malven/modu/2_4_71.test
malven/modu/2.4.71
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Element'.
  el: Element;
      ~~~~~~~
    at file://<tmpdir>/index.ts:18:7

TS2304 [ERROR]: Cannot find name 'Element'.
  el: Element;
      ~~~~~~~
    at file://<tmpdir>/index.ts:45:7

TS2304 [ERROR]: Cannot find name 'Element'.
  declare el: Element;
              ~~~~~~~
    at file://<tmpdir>/index.ts:55:15

TS2304 [ERROR]: Cannot find name 'Element'.
  get(name: string): Element | null {
                     ~~~~~~~
    at file://<tmpdir>/index.ts:71:22

TS2304 [ERROR]: Cannot find name 'NodeListOf'.
  getAll(name: string): NodeListOf<Element> {
                        ~~~~~~~~~~
    at file://<tmpdir>/index.ts:79:25

TS2304 [ERROR]: Cannot find name 'Element'.
  getAll(name: string): NodeListOf<Element> {
                                   ~~~~~~~
    at file://<tmpdir>/index.ts:79:36

TS2304 [ERROR]: Cannot find name 'Element'.
  getData(name: string, el?: Element | null): string | number | boolean | null {
                             ~~~~~~~
    at file://<tmpdir>/index.ts:88:30

TS2304 [ERROR]: Cannot find name 'Element'.
  init(containerEl?: Element | Document | null): void {}
                     ~~~~~~~
    at file://<tmpdir>/index.ts:154:22

TS2304 [ERROR]: Cannot find name 'Document'.
  init(containerEl?: Element | Document | null): void {}
                               ~~~~~~~~
    at file://<tmpdir>/index.ts:154:32

TS2304 [ERROR]: Cannot find name 'Element'.
  destroyModules(containerEl?: Element | Document | null): void {}
                               ~~~~~~~
    at file://<tmpdir>/index.ts:163:32

TS2304 [ERROR]: Cannot find name 'Document'.
  destroyModules(containerEl?: Element | Document | null): void {}
                                         ~~~~~~~~
    at file://<tmpdir>/index.ts:163:42

TS2304 [ERROR]: Cannot find name 'Element'.
  getModuleElements(containerEl?: Element | Document): Element[] {
                                  ~~~~~~~
    at file://<tmpdir>/index.ts:165:35

TS2304 [ERROR]: Cannot find name 'Document'.
  getModuleElements(containerEl?: Element | Document): Element[] {
                                            ~~~~~~~~
    at file://<tmpdir>/index.ts:165:45

TS2304 [ERROR]: Cannot find name 'Element'.
  getModuleElements(containerEl?: Element | Document): Element[] {
                                                       ~~~~~~~
    at file://<tmpdir>/index.ts:165:56

TS2304 [ERROR]: Cannot find name 'Element'.
  initModulesForElements(elements: Element[]): void {}
                                   ~~~~~~~
    at file://<tmpdir>/index.ts:169:36

TS2304 [ERROR]: Cannot find name 'Element'.
  destroyModulesForElements(elements: Element[]): void {}
                                      ~~~~~~~
    at file://<tmpdir>/index.ts:171:39

TS2304 [ERROR]: Cannot find name 'Element'.
  initModules(element: Element): Promise<(void | Modu)[]> {
                       ~~~~~~~
    at file://<tmpdir>/index.ts:173:24

TS2304 [ERROR]: Cannot find name 'Element'.
    element: Element;
             ~~~~~~~
    at file://<tmpdir>/index.ts:178:14

TS2304 [ERROR]: Cannot find name 'Element'.
  getModuleNamesFromElement(element: Element): ModuleNames {
                                     ~~~~~~~
    at file://<tmpdir>/index.ts:185:38

TS2304 [ERROR]: Cannot find name 'Element'.
  getModulesForElement(element: Element, name?: string): StoredModu[] {
                                ~~~~~~~
    at file://<tmpdir>/index.ts:189:33

Found 20 errors.

error: Type checking failed.

